--- a/Assets/Card/Scripts/Core/GameState/TheaCard.Core.GameState.asmdef
+++ b/Assets/Card/Scripts/Core/GameState/TheaCard.Core.GameState.asmdef
@@ -9,7 +9,9 @@
         "GUID:8e585ae020a07d94b9b34e483fe74e31",
         "GUID:f6a93ebec9faf6247b68953d7cbe64c9",
         "GUID:a7aa3e41210729c48b73d5f85e966431",
-        "GUID:bd8eac64402db284fb653c2c72983fa6"
+        "GUID:bd8eac64402db284fb653c2c72983fa6",
+        "GUID:029c1c1b674aaae47a6841a0b89ad80e",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
