--- a/Assets/Card/Scripts/Core/Initialize/TheaCard.Core.Initialize.asmdef
+++ b/Assets/Card/Scripts/Core/Initialize/TheaCard.Core.Initialize.asmdef
@@ -11,7 +11,9 @@
         "GUID:a7aa3e41210729c48b73d5f85e966431",
         "GUID:f6a93ebec9faf6247b68953d7cbe64c9",
         "GUID:4168fab849a9f7b4582d52a61718ae14",
-        "GUID:bd8eac64402db284fb653c2c72983fa6"
+        "GUID:bd8eac64402db284fb653c2c72983fa6",
+        "GUID:6c51692b637165d449311df253d7528d",
+        "GUID:8f32ceb32fca674479c6ff4ee41cbf2c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
